[package]
name = "dcontract"
version = "0.1.0"
authors = ["v1pka <meus.polus@gmail.com>"]

[dependencies]
iron = "0.5.1"
bodyparser = "0.7.0"
router = "0.5.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"


clap = "2.22.0"
env_logger = "0.4.0"

chrono = "0.3.0"
rand = "0.3.0"
log = "0.3.0"
byteorder = "1.0.0"

exonum = "0.2.0"
exonum-configuration = "0.2.0"

[dev-dependencies]
iron-test = "0.5.0"
mime = "0.2.0"